<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profilepic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/viewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/viewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/viewGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/viewGenre"
        app:layout_constraintEnd_toEndOf="@+id/viewName"
        app:layout_constraintStart_toStartOf="@+id/viewName"
        app:layout_constraintTop_toBottomOf="@+id/viewName"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/viewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/viewPrice"
        app:layout_constraintEnd_toEndOf="@+id/viewGenre"
        app:layout_constraintStart_toStartOf="@+id/viewGenre"
        app:layout_constraintTop_toBottomOf="@+id/viewGenre"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/viewEmail"
        app:layout_constraintEnd_toEndOf="@+id/viewPrice"
        app:layout_constraintStart_toStartOf="@+id/viewPrice"
        app:layout_constraintTop_toBottomOf="@+id/viewPrice"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/viewBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/viewBio"
        app:layout_constraintEnd_toEndOf="@+id/viewEmail"
        app:layout_constraintStart_toStartOf="@+id/viewEmail"
        app:layout_constraintTop_toBottomOf="@+id/viewEmail"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>